# guide

./: .gitignore  Cargo.toml  LICENSE  README.md  book.toml  build.rs
code/: 2_10_mixed.rs  2_11_timeseries.rs  2_12_legend.rs  2_1_chart_context.rs  2_2_mesh.rs  2_3_axis.rs  2_4_title.rs  2_5_line_plot.rs  2_6_scatter.rs  2_7_area_chart.rs  2_8_bar_chart.rs  2_9_vbar.rs
examples/: basic_basic_data_plotting_1.rs  basic_basic_data_plotting_2.rs  basic_basic_data_plotting_3.rs  basic_basic_data_plotting_4.rs  basic_basic_data_plotting_5.rs  basic_basic_data_plotting_6.rs  basic_basic_data_plotting_7.rs  basic_basic_data_plotting_8.rs  basic_chart_components_1.rs  basic_chart_components_2.rs  basic_chart_components_3.rs  basic_chart_context_1.rs  basic_chart_context_2.rs  intro_getting_started_1.rs
markdown/: SUMMARY.md
markdown/appendix/: supported_backends.md
markdown/backends/: overview.md
markdown/basic/: animate.md  basic_data_plotting.md  chart_components.md  chart_context.md  draw_3d_plots.md  multipanel.md  overview.md
markdown/coord/: coord_combinators.md  coord_system.md  high_dim.md  one_diml.md
markdown/drawing/: coord_decorator.md  overview.md
markdown/extend/: backend.md  series.md
markdown/intro/: getting_started.md  introduction.md
markdown/perf/: parallel_blit.md
markdown/tweak/: aixs_mesh_labels.md  layout.md  overview.md  relative_sizing.md
markdown/wasm/: overview.md
src/: SUMMARY.md  blank  main.rs
src/backends/: canvas_backend.md
src/basic/: basic_data_plotting.md  chart_components.md  chart_context.md  multipanel.md  overview.md
src/drawing/: backends.md  drawing_area.md  elements.md
src/extend/: coord.md  overview.md
src/intro/: getting_started.md  introduction.md
src/perf/: incremental_rendering.md  inplace_rendering.md
src/tweak/: aixs_mesh_labels.md  (+1 more)
(+1 files in other folders)
